objects/User.object
<CustomObject>
    <fields>
        <fullName>DB_Region__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                    <color>#009900</color>
                    <label>NA</label>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                    <color>#3333FF</color>
                    <label>EMEA</label>
                </value>
                <value>
                    <fullName>APAC</fullName>
                    <color>#CC6600</color>
                    <label>APAC</label>
                </value>
                <value>
                    <fullName>LA</fullName>
                    <color>#990000</color>
                    <label>LA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_UUID__c</fullName>
        <externalId>true</externalId>
        <label>Phone UUID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>echosign_dev1__EchoSign_Allow_Delegated_Sending__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box so that others in this Salesforce organization can send Adobe Sign agreements on behalf of this user.</description>
        <inlineHelpText>Check this box so that others in this Salesforce organization can send Adobe Sign agreements on behalf of this user.</inlineHelpText>
        <label>Adobe Sign Allow Sending As Other Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__EchoSign_Email_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox indicates that the user&apos;s email address has been validated in Adobe Sign API.</description>
        <inlineHelpText>This checkbox indicates that the user&apos;s email address has been validated in Adobe Sign API.</inlineHelpText>
        <label>Adobe Sign Email Verified</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>